--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+    --background-color: #152326;
+    --border-button: #00EAFF;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 body{
-    background-color: #152326;
+    background-color: var(--background-color);
+    /* background: linear-gradient(to right,  #152326, #040b0c, #152326); */
     color: white;
 } 
 
-/* .navbar-brand{
-    font-family: 'encode', sans-serif;
-    font-size: 1.5rem;
-    color: #000;
-    text-transform: uppercase
-} */
-
 .navbar{
-    backdrop-filter: blur(5px);
-    background-color: #010b0d69;
+    backdrop-filter: blur(4px);
+    background-color: #010b0d3f;
     position: fixed;
     width: 100%;
     z-index: 100;
@@ -33,11 +32,64 @@ body{
 }
 
 .nav-link:hover{
-    color: rgb(177, 177, 177);
+    color: var(--border-button);
+    text-shadow: var(--background-color) 0px 2px 10px;
 }
 
 .hero{
     background-image: url("../img/hero.png");
     background-size: cover;
-    backdrop-filter: blur(10px);
+}
+
+.btn-link{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 400;
+    border: var(--border-button) 1.5px solid;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    transition: 0.2s
+}
+
+.btn-link:hover{
+    color: #fff;
+    font-weight: bold;
+    text-shadow: var(--background-color) 0px 2px 10px;
+    background-color: var(--border-button);
+}
+
+.progress{
+    background-color: #00000000;
+    border: white 1px solid;
+
+}
+.progress-bar{
+    background-color: var(--border-button);
+    border-radius: 0 5px 5px 0;
+}
+
+.letter-animation{
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: .10em solid var(--border-button);
+    max-width: 18ch;
+    animation: typing 3s steps(18), blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 18ch }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: var(--border-button); }
+}
+
+.list-group{
+    background-color: #00EAFF1A;
+    box-shadow: #0d1618 5px 5px 10px;
+    padding: 25px;
 }
